[package]
name = "temple-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.0", features = ["dynamic_linking", "file_watcher"] }
bevy_editor_pls = { git = "https://github.com/jakobhellermann/bevy_editor_pls" }
leafwing-input-manager = "0.16.0"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
rand = "0.8.5"

[patch.crates-io]
# Fix after it is merged back
transform-gizmo-bevy = { git = "https://github.com/ArcaEge/transform-gizmo" }

# https://bevyengine.org/learn/quick-start/getting-started/setup/
# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
